my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_16/ESYNTAX_16.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_16.dml:11:27: error ESYNTAX: syntax error at '\xc5': Hex escape above \x7f in Unicode string
